syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.assessment.product";

message GetAllProductRequest{ }

message CreateProductRequest{
  string name = 1;
  string Status = 2;
}
message GetProductRequest {
  int32 productId = 1;  
}

message UpdateRequest{
  int32 productId = 1;
  string name = 2;  
  string status = 3;
}

message DeleteRequest{
  int32 productId = 1;
}

message GetAllProductResponse {
   repeated GetProductResponse productDetails = 1;
}
message CreateProductResponse {
  int32 productId = 1;
  string message = 2;  
}

message GetProductResponse {
  int32 productId = 1;
  string name = 2;  
  string status = 3;
}

message UpdateResponse{  
  string message =1;
  int32 productId = 2;
  string name = 3;  
  string status = 4;
}

message DeleteResponse{
  string message =1;
}

service ProductService {
  rpc getAllProducts(GetAllProductRequest) returns (GetAllProductResponse) {};
  rpc createProduct(CreateProductRequest) returns (CreateProductResponse) {};
  rpc getProduct(GetProductRequest) returns (GetProductResponse) {};
  rpc updateProduct(UpdateRequest) returns (UpdateResponse) {};
  rpc deleteProduct(DeleteRequest) returns (DeleteResponse) {};
  
}
